# VTinder

./: .env_example  README.md  main.py  pyproject.toml
core/: config.py
db/: crud.py  models.py  session.py
vk/: api.py  assets.py  base.py  bot.py  eval.py  vk.py
