[tool.poetry]
name = "vtinder"
version = "0.1.0"
description = ""
authors = ["Nik Bezmaternykh <nikitabit@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
environs = "^9.5.0"
psycopg2 = "^2.9.6"
vk-api = "^11.9.9"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
